# council-ai

./: .gitignore  DEPLOYMENT.md  README.md  plan.md  pyproject.toml  pytest.ini  requirements.txt  test_env.py  test_groq.py
.github/workflows/: ci.yml
.streamlit/: config.toml
evals/: run_evals.py
src/: __init__.py  agents.py  cli.py  graph.py  state.py  tools.py
tests/: conftest.py  test_agents.py  test_quality.py
ui/: app.py
