[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "council-ai"
version = "0.1.0"
description = "A multi-agent debate system powered by LangGraph and Groq"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Council AI"}
]
dependencies = [
  "langchain==1.3.2",
  "langgraph==1.2.2",
  "langchain-groq==1.1.2",
  "langchain-community==0.4.2",
  "groq==0.37.1",
  "streamlit==1.58.0",
  "tavily-python==0.7.25",
  "python-dotenv==1.2.2",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.3",
]

[project.scripts]
council-ai = "src.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["src*"]